yaml/burst.yaml
apiVersion: v1
kind: Pod
metadata:
  name: burst
  labels:
    name: nginx  
spec:
  containers:
  - name: checkers
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: 200m
        memory: 200Mi
      requests:
        cpu: 100m 
        memory: 100Mi
