yaml/mypod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  labels: 
    name: nginx 
spec:
  containers:
  - name: app
    image: nginx:1.14.2
