yaml/simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
  - name: checkers
    image: nginx:1.14.2
    ports:
    - containerPort: 80
